--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Run tests
 
 on: [push]
 
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-    - name: Test with unittest
+    - name: Test with pytest
       run: |
-        python -m tests
+        pip install pytest
+        pytest tests
