--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-    - name: Test with pytest
-      run: |
         pip install pytest
+    - name: Run tests
+      run: |
         pytest tests
